--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "author": "TSA",
   "license": "ISC",
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.808.0",
     "axios": "^1.8.4",
     "bcryptjs": "^3.0.2",
     "body-parser": "^1.20.3",
@@ -24,6 +25,7 @@
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.13.0",
     "multer": "^1.4.5-lts.2",
+    "multer-s3": "^3.0.1",
     "nodemailer": "^6.10.0"
   },
   "devDependencies": {
